tests/compile_fail/invalid_track_repeat_empty_components.rs
use surgeist_style::{GridTrackComponent, TrackRepeat, TrackRepeatCount};

fn main() {
    let _repeat = TrackRepeat {
        count: TrackRepeatCount::AutoFit,
        components: Vec::<GridTrackComponent>::new(),
    };
}
